--- a/templates/negp.html
+++ b/templates/negp.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <title>Document</title>
 </head>
-<body class="index">
-<h1>3 страница</h1>
+<body class="negp">
+<h1>4 страница</h1>
 </body>
 </html>
