--- a/static/main.css
+++ b/static/main.css
@@ -6,10 +6,10 @@ body.about {
     background: green;
 }
 
-body.user {
+body.contac {
     background: blue;
 }
 
-body.life {
+body.negp {
     background: yellow;
 }
